// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render highlight items 1`] = `
<div
  aria-label="Замена стёкол"
  class="bg-card hover:ring-ring/40 dark:ring-foreground/20 ring-foreground/10 dark:hover:ring-primary/40 flex flex-col rounded-xl p-4 ring transition-all"
  data-testid="1"
>
  <div
    class="flex flex-col gap-4"
  >
    <div
      class="flex items-center justify-between"
    >
      <span
        class="text-foreground/90 text-base font-bold lg:text-lg"
      >
        Замена стёкол
      </span>
      <span
        class="ring-foreground/10 rounded-lg px-2 py-1 text-xs text-nowrap ring"
      >
        от 1-ого часа
      </span>
    </div>
    <div
      class="flex w-full flex-col"
    >
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          Гарантия на работы - 1 год
        </span>
      </div>
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          Стекла напрямую с заводов
        </span>
      </div>
    </div>
    <div
      class="flex flex-row"
    >
      <span
        class="text-foreground/80 flex text-xs lg:text-sm"
      >
        Подробнее
      </span>
    </div>
  </div>
</div>
`;

exports[`should render highlight items 2`] = `
<div
  aria-label="Ремонт сколов"
  class="bg-card hover:ring-ring/40 dark:ring-foreground/20 ring-foreground/10 dark:hover:ring-primary/40 flex flex-col rounded-xl p-4 ring transition-all"
  data-testid="2"
>
  <div
    class="flex flex-col gap-4"
  >
    <div
      class="flex items-center justify-between"
    >
      <span
        class="text-foreground/90 text-base font-bold lg:text-lg"
      >
        Ремонт сколов
      </span>
      <span
        class="ring-foreground/10 rounded-lg px-2 py-1 text-xs text-nowrap ring"
      >
        от 10 минут
      </span>
    </div>
    <div
      class="flex w-full flex-col"
    >
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          Сколы и трещины
        </span>
      </div>
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          100% прозрачный полимер
        </span>
      </div>
    </div>
    <div
      class="flex flex-row"
    >
      <span
        class="text-foreground/80 flex text-xs lg:text-sm"
      >
        Подробнее
      </span>
    </div>
  </div>
</div>
`;

exports[`should render highlight items 3`] = `
<div
  aria-label="Тонирование стекол"
  class="bg-card hover:ring-ring/40 dark:ring-foreground/20 ring-foreground/10 dark:hover:ring-primary/40 flex flex-col rounded-xl p-4 ring transition-all"
  data-testid="3"
>
  <div
    class="flex flex-col gap-4"
  >
    <div
      class="flex items-center justify-between"
    >
      <span
        class="text-foreground/90 text-base font-bold lg:text-lg"
      >
        Тонирование стекол
      </span>
      <span
        class="ring-foreground/10 rounded-lg px-2 py-1 text-xs text-nowrap ring"
      >
        от 30 минут
      </span>
    </div>
    <div
      class="flex w-full flex-col"
    >
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          Пленка США/Корея
        </span>
      </div>
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          гарантия 5-10 лет
        </span>
      </div>
    </div>
    <div
      class="flex flex-row"
    >
      <span
        class="text-foreground/80 flex text-xs lg:text-sm"
      >
        Подробнее
      </span>
    </div>
  </div>
</div>
`;

exports[`should render highlight items 4`] = `
<div
  aria-label="Тонирование оптики"
  class="bg-card hover:ring-ring/40 dark:ring-foreground/20 ring-foreground/10 dark:hover:ring-primary/40 flex flex-col rounded-xl p-4 ring transition-all"
  data-testid="4"
>
  <div
    class="flex flex-col gap-4"
  >
    <div
      class="flex items-center justify-between"
    >
      <span
        class="text-foreground/90 text-base font-bold lg:text-lg"
      >
        Тонирование оптики
      </span>
      <span
        class="ring-foreground/10 rounded-lg px-2 py-1 text-xs text-nowrap ring"
      >
        от 45 мин
      </span>
    </div>
    <div
      class="flex w-full flex-col"
    >
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          От камешков и гравия
        </span>
      </div>
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          Глянцевый вид оптики
        </span>
      </div>
    </div>
    <div
      class="flex flex-row"
    >
      <span
        class="text-foreground/80 flex text-xs lg:text-sm"
      >
        Подробнее
      </span>
    </div>
  </div>
</div>
`;

exports[`should render highlight items 5`] = `
<div
  aria-label="Бронирование"
  class="bg-card hover:ring-ring/40 dark:ring-foreground/20 ring-foreground/10 dark:hover:ring-primary/40 flex flex-col rounded-xl p-4 ring transition-all"
  data-testid="5"
>
  <div
    class="flex flex-col gap-4"
  >
    <div
      class="flex items-center justify-between"
    >
      <span
        class="text-foreground/90 text-base font-bold lg:text-lg"
      >
        Бронирование
      </span>
      <span
        class="ring-foreground/10 rounded-lg px-2 py-1 text-xs text-nowrap ring"
      >
        от 2-ух часа
      </span>
    </div>
    <div
      class="flex w-full flex-col"
    >
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          Защита от сколов и реагентов
        </span>
      </div>
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          Полиуретан (антигравий)
        </span>
      </div>
    </div>
    <div
      class="flex flex-row"
    >
      <span
        class="text-foreground/80 flex text-xs lg:text-sm"
      >
        Подробнее
      </span>
    </div>
  </div>
</div>
`;

exports[`should render highlight items 6`] = `
<div
  aria-label="Кондиционер"
  class="bg-card hover:ring-ring/40 dark:ring-foreground/20 ring-foreground/10 dark:hover:ring-primary/40 flex flex-col rounded-xl p-4 ring transition-all"
  data-testid="6"
>
  <div
    class="flex flex-col gap-4"
  >
    <div
      class="flex items-center justify-between"
    >
      <span
        class="text-foreground/90 text-base font-bold lg:text-lg"
      >
        Кондиционер
      </span>
      <span
        class="ring-foreground/10 rounded-lg px-2 py-1 text-xs text-nowrap ring"
      >
        от 15 минут
      </span>
    </div>
    <div
      class="flex w-full flex-col"
    >
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          Соблюдения регламентов
        </span>
      </div>
      <div
        class="flex flex-row items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dot"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12.1"
            cy="12.1"
            r="1"
          />
        </svg>
        <span
          class="text-foreground/80 text-sm"
        >
          Бесплатная диагностика
        </span>
      </div>
    </div>
    <div
      class="flex flex-row"
    >
      <span
        class="text-foreground/80 flex text-xs lg:text-sm"
      >
        Подробнее
      </span>
    </div>
  </div>
</div>
`;
